      reasonably time out instead of hanging for 3 minutes (the default TCP
      connection timeout). (CNY-1161)
    * Conary will now correctly erase a trove whose files have changed owners
      or groups to values not mapped to users or groups on the current system.
      (CNY-1071)
    * Conary will now display files that are transient as transient when
      --tags is used.

  o Bug Fixes:
    * Conary 1.1.14 and 1.1.15 failed to update when encountering the
      multitag protocol; this regression is resolved. (CNY-1257)
    * The logparse module now correctly parses python tracebacks in
      conary log files. (CNY-1258)

  o Internal changes:
    * If cache database is locked, retry several times before giving up.
      (CNY-1143)

Changes in 1.1.15:
  o Client Changes:
    * On the update path, errors and warnings are now handled by callbacks.
      This allows applications using the Conary API to capture and process
      them as appropriate. (CNY-1184)

  o Bug Fixes:
    * "conary erase --help" now displays options as "Erase Options"
      instead of "Update Options". (CNY-1090)

  o Build Changes:
    * Change in assembling recipe namespace changed how unknown recipe
      attributes were handled (they appeared as None instead of raising
      an Attribute Error).
    * Packaged directories are no longer included in :lib components
      because doing so can create multilib failures.  (CNY-1199)

Changes in 1.1.14:
  o Client Changes:
    * Tag handler output is now redirected to a callback. The command line
      callback places "[ tag ]" in front of the output from each tag handler
      to help with debugging. (CNY-906)
    * All filesystem operations are journaled now to allow recovery if an
      unexpected failure occurs. "conary revert" has been added to recover
      from cases where the journal is left behind unexpectedly. (CNY-1010)

  o Build Changes:
    * cvc will no longer fail if the EDITOR environment variable points