@@ -19,6 +19,7 @@ Changes in @NEW@:
       (CNY-1071)
     * Conary will now display files that are transient as transient when
       --tags is used.
+    * Implement support for the getTrovesInfo call
 
   o Bug Fixes:
     * Conary 1.1.14 and 1.1.15 failed to update when encountering the
@@ -29,6 +30,9 @@ Changes in @NEW@:
   o Internal changes:
     * If cache database is locked, retry several times before giving up.
       (CNY-1143)
+
+  o Server Changes:
+    * implement support for getTroveInfo
 
 Changes in 1.1.15:
   o Client Changes:
